# Critic_Pluning

./: README.md
nav2_dwb_controller/dwb_core/: CMakeLists.txt
nav2_dwb_controller/dwb_core/src/: dwb_local_planner.cpp  publisher.cpp
nav2_dwb_controller/dwb_critics/: CMakeLists.txt  default_critics.xml
nav2_dwb_controller/dwb_critics/src/: goal_dist.cpp  map_grid.cpp  min_distance.cpp  oscillation.cpp  path_align.cpp  path_dist.cpp
nav2_dwb_controller/dwb_plugins/src/: standard_traj_generator.cpp  xy_theta_iterator.cpp
nav2_dwb_controller/nav_2d_utils/src/: tf_help.cpp
nav2_navfn_planner/include/nav2_navfn_planner/: navfn.hpp  navfn_planner.hpp
nav2_navfn_planner/src/: navfn.cpp  navfn_planner.cpp
robots_qt/.qtc_clangd/: compile_commands.json
robots_qt/src/robots_qt/: CMakeLists.txt
src/chulilaser/: CMakeLists.txt  package.xml
src/chulilaser/src/: mylaser.cpp  mylaser1.cpp
src/deliverbot_description/: CMakeLists.txt  package.xml
src/deliverbot_description/launch/: deliverbot_description.launch.py  deliverbot_description_xacro.launch.py  gazebo.launch.py  mygazebo.launch.py
src/deliverbot_description/rviz/: deliverbot.rviz  rviz.rviz
src/deliverbot_description/urdf/: Industrial_computer.urdf.xacro  LA_4WD_LingFeng.urdf  astra.urdf.xacro  astra2.urdf.xacro  co.xacro  deliverbot.gazebo.xacro  deliverbot.materials.xacro  deliverbot.urdf  deliverbot.urdf.xacro  deliverbot.xacro  (+8 more)
src/deliverbot_msgs/: CMakeLists.txt  package.xml
src/deliverbot_msgs/msg/: Battery.msg  Imu.msg  Lifts.msg
src/myrobot_cartographer/: CMakeLists.txt  package.xml
(+37 files in other folders)
